--- a/mac/shop/templates/shop/checkout.html
+++ b/mac/shop/templates/shop/checkout.html
@@ -13,46 +13,79 @@
   </div>
   <div class="col my-4">
     <h2>Step 2- Enter Your Address and other details</h2>
-    <form class="row g-3">
+    <form class="row g-3" method="post" action="/shop/checkout/">{% csrf_token %} 
+      <input type="hidden" name="itemsJson" id="itemsJson">
       <div class="col-md-6">
-        <label for="inputname1" class="form-label">First Name</label>
-        <input type="name" class="form-control" id="inputname1" placeholder="First Name">
-      </div>
-      <div class="col-md-6">
-        <label for="inputname" class="form-label">Last Name</label>
-        <input type="name" class="form-control" id="inputname" placeholder="Last Name">
-      </div>
-      <div class="col-12">
-        <label for="inputEmail4" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-      </div>
-      <div class="col-12">
-        <label for="inputphone" class="form-label">Phone</label>
-        <input type="tel" class="form-control" id="inputphone" placeholder="Phone Number">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress" class="form-label">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-      </div>
-      <div class="col-12">
-        <label for="inputAddress2" class="form-label">Address Line 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+        <label for="name" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="name" name="name" placeholder="First Name">
       </div>
       <div class="col-md-6">
-        <label for="inputCity" class="form-label">City</label>
-        <input type="text" class="form-control" id="inputCity">
+        <label for="lname" class="form-label">Last Name</label>
+        <input type="name" class="form-control" id="lname" name="lname" placeholder="Last Name">
+      </div>
+      <div class="col-12">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+      </div>
+      <div class="col-12">
+        <label for="phone" class="form-label">Phone</label>
+        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone Number">
+      </div>
+      <div class="col-12">
+        <label for="address1" class="form-label">Address</label>
+        <input type="text" class="form-control" id="address1" name="address1" placeholder="1234 Main St">
+      </div>
+      <div class="col-12">
+        <label for="address2" class="form-label">Address Line 2</label>
+        <input type="text" class="form-control" id="address2" name="address2" placeholder="Apartment, studio, or floor">
+      </div>
+      <div class="col-md-6">
+        <label for="city" class="form-label">City</label>
+        <input type="text" class="form-control" name="city" id="city">
       </div>
       <div class="col-md-4">
-        <label for="inputState" class="form-label">State</label>
-        <select id="inputState" class="form-select">
+        <label for="state" class="form-label">State</label>
+        <select id="state" class="form-select" name="state">
           <option selected>Select</option>
-          <option>UP</option>
-          <option>UK</option>
+
+          <option>Andhra Pradesh</option>
+          <option>Arunachal Pradesh</option>
+          <option >Assam</option>
+          <option>Bihar</option>
+          <option>Chandigarh</option>
+          <option>Chhattisgarh</option>
+          <option>Goa</option>
+          <option>Gujarat</option>
+          <option>Haryana</option>
+          <option>Himachal Pradesh</option>
+          <option>Jharkhand</option>
+          <option>Karnataka</option>
+          <option>Kerala</option>
+          <option>Madhya Pradesh</option>
+          <option >Maharashtra</option>
+          <option >Manipur</option>
+          <option >Meghalaya</option>
+          <option>Mizoram</option>
+          <option>Nagaland</option>
+          <option >Odisha</option>
+          <option >Punjab</option>
+          <option >Rajasthan</option>
+          <option >Sikkim</option>
+          <option>Tamil Nadu</option>
+          <option >Telangana</option>
+          <option >Tripura</option>
+          <option>Uttar Pradesh</option>
+          <option>Uttarakhand</option>
+          <option>West Bengal</option>
+          
+
+
+
         </select>
       </div>
       <div class="col-md-2">
-        <label for="inputZip" class="form-label">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
+        <label for="zip_code" class="form-label">Zip</label>
+        <input type="text" class="form-control" id="zip_code" name="zip_code">
       </div>
       <div class="col-12">
         <button type="submit" id="ord" class="btn btn-primary" >Place Order</button>
@@ -97,6 +130,12 @@
     }
     document.getElementById('items').innerHTML = mystr1;
     document.getElementById('cart').innerHTML = Object.keys(cart).length;
+    document.getElementById('itemsJson').value=JSON.stringify(cart);
+    {% if thank %}
+    alert('Thanks for ordering with us.Your order id is {{id}}.Use it to Track Your Order')
+    localStorage.clear();
+    document.location="/shop"
+    {% endif %}
 
   }
 
