--- a/mac/blog/templates/blog/basic.html
+++ b/mac/blog/templates/blog/basic.html
@@ -18,10 +18,13 @@
         #popcart{
             background-color: blue;
         }
+        
         {% block css %}{% endblock %}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v15.0" nonce="qUXTnDna"></script>
     <script src="https://kit.fontawesome.com/f928c52a29.js" crossorigin="anonymous"></script>
 
 </head>
