--- a/mac/blog/templates/blog/index.html
+++ b/mac/blog/templates/blog/index.html
@@ -1,15 +1,35 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    {% load static %}
-    <a href="{% static 'blog/mystatic.txt' %}">Click me</a>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% extends 'blog/basic.html' %}
+{% block css %}
+a:hover{
+  color:red
+}
+{% endblock %}
+
+{% block body %}
+    <div class="container mt-4">
+    <div class="row mb-2">
+      {%for i in blog%}
+
+
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">{{i.title}}</strong>
+          <h3 class="mb-0">{{i.head0}}</h3>
+          <div class="mb-1 text-muted">{{i.pub_date}}</div>
+          <p class="card-text mb-auto">{{i.chead0|slice:"0:155"}}...</p>
+          <a href="/blog/blogpost/{{i.post_id}}" class="stretched-link">Read More</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <img class="bd-placeholder-img" width="200" height="250" src='/media/{{i.thumbnail}}' alt="">
+        </div>
+      </div>
+    </div>
+
+    {% endfor %}
+
+  </div>
+  </div>
+
+{% endblock%}
+    
