--- a/mac/mac/templates/index.html
+++ b/mac/mac/templates/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <script>window.location='/shop';</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome To My Awesome Cart</title>
