--- a/mac/shop/templates/shop/contact.html
+++ b/mac/shop/templates/shop/contact.html
@@ -40,8 +40,8 @@ margin-bottom:5px
 {%block js %}
 <script>
 {% if status %}
-alert('Submited Successfully')
-document.location='/shop'
+alert('Thanks for contacting us.We will get back to you soon!')
+document.location='/shop/contact'
 {% endif %}
 
 </script>
