--- a/mac/shop/templates/shop/index.html
+++ b/mac/shop/templates/shop/index.html
@@ -74,12 +74,15 @@ padding-right: 0;
                         <img src='/media/{{i.image}}' class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                            <h4>&#8377;<span  id="pricepr{{i.id}}">{{i.price}}</span></h4>
                             <p class="card-text">{{i.desc|slice:"0:60"}}...</p>
+                            <div>
                             <span id="divpr{{i.id}}" class="divpr">
-                                <button id="pr{{i.id}}" class="btn btn-primary cart">Add to Cart</button>
+                                <button id="pr{{i.id}}" class="btn btn-primary cart my-1">Add to Cart</button>
                             </span>
-                            <a href="/shop/products/{{i.id}}"><button id="gv{{i.id}}" class="btn btn-primary cart">Quick
+                            <a href="/shop/products/{{i.id}}"><button id="gv{{i.id}}" class="btn btn-primary cart my-1">Quick
                                     View</button></a>
+                            </div>
 
                         </div>
                     </div>
@@ -140,7 +143,8 @@ padding-right: 0;
         else {
             qty = cart[idstr] = 1;
             name = document.getElementById('name' + idstr).innerHTML
-            cart[idstr] = [qty, name];
+            price = document.getElementById('price' + idstr).innerHTML
+            cart[idstr] = [qty, name,parseInt(price)];
         }
         updateCart(cart);
         console.log(cart)
@@ -179,6 +183,8 @@ padding-right: 0;
         }
         localStorage.clear();
         cart = {}
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
+
         updateCart(cart);
     }
 
@@ -192,7 +198,7 @@ padding-right: 0;
         localStorage.setItem('cart', JSON.stringify(cart));
         updatePopOver(cart);
 
-        // document.getElementById('cart').innerHTML=Object.keys(cart).length;
+        document.getElementById('cart').innerHTML=Object.keys(cart).length;
     }
 
     // if plus or minus button is clicked ,change the cart as well as the display value
@@ -210,19 +216,26 @@ padding-right: 0;
             b = this.id.slice(5,)
             // console.log(b)
             document.getElementById('div' + b).innerHTML = '<button id="' + b + '" class="btn btn-primary cart">Add to Cart</button>'
-            let newObj = Object.keys(cart)
-                .filter(key => key != b)
-                .reduce((acc, key) => {
-                    acc[key] = cart[key];
-                    return acc;
-                }, {});
-            // console.log(newObj)
-            localStorage.setItem('cart', JSON.stringify(newObj));
-            history.go();
+            delete cart[b]
+            updateCart(cart);
+            // let newObj = Object.keys(cart)
+            //     .filter(key => key != b)
+            //     .reduce((acc, key) => {
+            //         acc[key] = cart[key];
+            //         return acc;
+            //     }, {});
+            // // console.log(newObj)
+            // localStorage.setItem('cart', JSON.stringify(newObj));
+            // // history.go();
+            // window.location.reload();
+
+
+
 
 
 
         }
+
 
     });
 
