--- a/mac/shop/templates/shop/basic.html
+++ b/mac/shop/templates/shop/basic.html
@@ -57,8 +57,8 @@
 
 
                 </ul>
-                <form class="d-flex" role="search" style="margin:2px">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form method="get" action="/shop/search/" class="d-flex" role="search" style="margin:2px">
+        <input class="form-control me-2" name="search" id="search" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
                 <button type="button" id="popcart" class="btn btn-secondary mx-2" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content='Your shopping cart'>
