--- a/mac/shop/templates/shop/search.html
+++ b/mac/shop/templates/shop/search.html
@@ -1,3 +1,259 @@
 {% extends 'shop/basic.html' %}
-{% block title %}Search Results-My Awesome Cart{% endblock %}
-{% block body %}<h3>this is search page</h3>{% endblock %}
+{% block title %}Search-My Awesome Cart{% endblock %}
+
+{% block css %}
+
+
+.col-md-3
+{
+display: inline-block;
+margin-left:-4px;
+}
+
+.carousel-indicators .active {
+background-color: blue !important;
+}
+
+.col-md-3 img{
+
+<!--          width: 227px;-->
+<!--          max-height: 242px;-->
+}
+
+body .carousel-indicator li{
+background-color: blue;
+}
+
+body .carousel-indicators{
+bottom: 0;
+}
+
+body .carousel-control-prev-icon,
+body .carousel-control-next-icon{
+background-color: blue;
+}
+
+.carousel-control-prev,
+.carousel-control-next{
+top: auto !important;
+bottom: auto !important;
+}
+body .no-padding{
+padding-left: 0,
+padding-right: 0;
+}
+
+
+
+{% endblock %}
+
+{% block body %}
+{% load static %}
+
+<div class="container mt-4">
+    <!--        slideshow start here-->
+    {% for product,range,nslides in allProds %}
+    <h1 class="mt-4">{{product.0.category}}</h1>
+
+    <div id="carouselExampleIndicators{{forloop.counter}}" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators{{forloop.counter}}" data-bs-slide-to="0"
+                class="active" aria-current="true" aria-label="Slide 1"></button>
+            {% for i in range%}
+            <button type="button" data-bs-target="#carouselExampleIndicators{{forloop.parentloop.counter}}"
+                data-bs-slide-to="{{i}}" aria-label="Slide 2"></button>
+            {% endfor %}
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <!-- <img src="pexels-artem-podrez-6823567.jpg" class="d-block w-100" alt="..."> -->
+
+
+                {%for i in product%}
+
+                <div class="col-xs-3 col-sm-3 col-md-3">
+                    <div class="card align-items-center">
+                        <img src='/media/{{i.image}}' class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                            <h4>&#8377;<span  id="pricepr{{i.id}}">{{i.price}}</span></h4>
+                            <p class="card-text">{{i.desc|slice:"0:60"}}...</p>
+                            <div>
+                            <span id="divpr{{i.id}}" class="divpr">
+                                <button id="pr{{i.id}}" class="btn btn-primary cart my-1">Add to Cart</button>
+                            </span>
+                            <a href="/shop/products/{{i.id}}"><button id="gv{{i.id}}" class="btn btn-primary cart my-1">Quick
+                                    View</button></a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:4 and forloop.counter > 0 and not forloop.last%}
+            </div>
+            <div class="carousel-item">
+                {% endif %}
+                {% endfor %}
+            </div>
+
+
+
+
+
+        </div>
+
+    </div>
+
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators{{forloop.counter}}"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators{{forloop.counter}}"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+    {% endfor %}
+</div>
+{% endblock %}
+
+{%block js %}
+<script>
+    {% if msg|length != 0 %}
+    alert('{{msg}}');
+    window.location.href="/"
+    {% endif %}
+    // console.log("working")
+    // Find out the cart items from localStorage
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
+
+    }
+    else {
+        cart = JSON.parse(localStorage.getItem('cart'))
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
+        updateCart(cart);
+
+    }
+    // if the add to cart button is clicked ,add/increment the item
+    // $('.cart').click(function(){
+    $('.divpr').on('click', 'button.cart', function () {
+        var idstr = this.id.toString();
+
+        console.log(idstr);
+        if (cart[idstr] != undefined) {
+            qty = cart[idstr][0] + 1;
+        }
+        else {
+            qty = cart[idstr] = 1;
+            name = document.getElementById('name' + idstr).innerHTML
+            price = document.getElementById('price' + idstr).innerHTML
+            cart[idstr] = [qty, name,parseInt(price)];
+        }
+        updateCart(cart);
+        console.log(cart)
+        localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
+    });
+
+    // Add Popover to cart
+    // const exampleEl = document.getElementById('popcart')
+    // const popover = new bootstrap.Popover(exampleEl,{ content: "<h5>Cart for your items in my shopping cart</h5>",html:true})
+    updatePopOver(cart);
+    function updatePopOver(cart) {
+        console.log('we are inside a update popover')
+        var popStr = ''
+        popStr = popStr + "<h5>Cart for your items in my shopping cart</h5><div class=' mx-1 my-1'>";
+        var i = 1
+        for (var item in cart) {
+            popStr = popStr + "<b>" + i + ". " + "</b>"
+            popStr = popStr + document.getElementById("name" + item).innerHTML.slice(0, 19) + "..." + "  Qty: " + cart[item][0] + "<br>"
+            i = i + 1;
+        }
+        popStr = popStr + "</div> <a href='/shop/checkout'><button class='btn btn-primary' id ='checkout'>Checkout</button></a> <button class='btn btn-primary' onclick='clearCart()' id ='clearCart'>Clear Cart</button>   "
+
+        
+        const exampleEl = document.getElementById('popcart')
+        const popover = new bootstrap.Popover(exampleEl, { content: popStr, html: true, sanitize: false})
+
+
+    }
+
+
+    function clearCart() {
+        cart = JSON.parse(localStorage.getItem('cart'));
+        for (var item in cart) {
+            document.getElementById('div' + item).innerHTML = '<button id="' + item + '" class="btn btn-primary cart">Add to Cart</button>'
+        }
+        localStorage.clear();
+        cart = {}
+        document.getElementById('cart').innerHTML = Object.keys(cart).length;
+
+        updateCart(cart);
+    }
+
+    function updateCart(cart) {
+
+        for (var item in cart) {
+
+            document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "'class='btn btn-primary minus mx-1'>-</button><span id='val" + item + "''>" + cart[item][0] + "</span><button id='plus" + item + "'class='btn btn-primary plus mx-1'>+</button>";
+        }
+
+        localStorage.setItem('cart', JSON.stringify(cart));
+        updatePopOver(cart);
+
+        document.getElementById('cart').innerHTML=Object.keys(cart).length;
+    }
+
+    // if plus or minus button is clicked ,change the cart as well as the display value
+    $('.divpr').on("click", "button.minus", function () {
+        console.log('minus clicked')
+        a = this.id.slice(7,)
+        console.log(a)
+        cart['pr' + a][0] = cart['pr' + a][0] - 1;
+        cart['pr' + a][0] = Math.max(0, cart['pr' + a][0])
+        document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+        updateCart(cart);
+
+        if (cart['pr' + a][0] === 0) {
+            console.log('yay')
+            b = this.id.slice(5,)
+            // console.log(b)
+            document.getElementById('div' + b).innerHTML = '<button id="' + b + '" class="btn btn-primary cart">Add to Cart</button>'
+            delete cart[b]
+            updateCart(cart);
+            // let newObj = Object.keys(cart)
+            //     .filter(key => key != b)
+            //     .reduce((acc, key) => {
+            //         acc[key] = cart[key];
+            //         return acc;
+            //     }, {});
+            // // console.log(newObj)
+            // localStorage.setItem('cart', JSON.stringify(newObj));
+            // // history.go();
+            // window.location.reload();
+
+
+
+
+
+
+        }
+
+
+    });
+
+    $('.divpr').on("click", "button.plus", function () {
+        console.log('plus clicked')
+        a = this.id.slice(6,)
+        console.log(a)
+        cart['pr' + a][0] = cart['pr' + a][0] + 1;
+        document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+        updateCart(cart);
+
+    });
+
+
+</script>
+{% endblock %}
