--- a/mac/shop/templates/shop/about.html
+++ b/mac/shop/templates/shop/about.html
@@ -5,8 +5,8 @@
 
  <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">My Awesome Cart</h1>
-        <p class="col-md-8 fs-4">My Awesome Cart is an Indian e-commerce company, headquartered in Bengaluru, and incorporated in Singapore as a private limited company. The company initially focused on online book sales before expanding into other product categories such as consumer electronics, fashion, home essentials, groceries, and lifestyle products.</p>
+        <h1 class="display-5 fw-bold">QikCart</h1>
+        <p class="col-md-8 fs-4">QikCart is an Indian e-commerce company, headquartered in Bengaluru, and incorporated in Singapore as a private limited company. The company initially focused on online book sales before expanding into other product categories such as consumer electronics, fashion, home essentials, groceries, and lifestyle products.</p>
         <button class="btn btn-primary btn-lg" type="button">Example button</button>
       </div>
     </div>
