--- a/mac/shop/templates/shop/index.html
+++ b/mac/shop/templates/shop/index.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title %}My Awesome Cart{% endblock %}
+{% block title %}QikCart{% endblock %}
 
 {% block css %}
 
