--- a/mac/shop/templates/shop/basic.html
+++ b/mac/shop/templates/shop/basic.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/shop">My Awesome Cart</a>
+            <a class="navbar-brand" href="/shop">QikCart</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
